finished areas content

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
       <!-- Begin Hero -->
       <section class="hero is-large">
         <!-- Begin Mobile Nav -->
-        <nav class="navbar is-transparent is-hidden-desktop">
+        <nav class="navbar is-transparent is-hidden-desktop" style="background: rgba(255,255, 255, 0.5);">
           <!-- Begin Burger Menu -->
           <div class="navbar-brand">
             <div class="navbar-burger burger" data-target="mobile-nav">
@@ -56,32 +56,32 @@
             <div class="navbar-end">
               <div class="navbar-item">
                 <a class="navbar-item" href="#home">
-                  Home
+                  Inicio
                 </a>
               </div>
               <div class="navbar-item">
                 <a class="navbar-item" href="#about-me">
-                  About Me
+                  Sobre Nosotros
                 </a>
               </div>
               <div class="navbar-item">
                 <a class="navbar-item" href="#services">
-                  Services
+                  Áreas
                 </a>
               </div>
               <div class="navbar-item">
                 <a class="navbar-item" href="#skills">
-                  Skills
+                  Macroproyectos
                 </a>
               </div>
               <div class="navbar-item">
                 <a class="navbar-item" href="#my-work">
-                  My Work
+                  ODS
                 </a>
               </div>
               <div class="navbar-item">
                 <a class="navbar-item" href="#contact">
-                  Contact
+                  Contacto
                 </a>
               </div>
             </div>
@@ -89,11 +89,10 @@
         </nav>
         <!-- End Mobile Nav -->
         <!-- Begin Hero Content-->
-        <div class="hero-body">
+        <div class="hero-body" style="background: rgba(255,255, 255, 0.5);">
           <div class="container has-text-centered">
-            <h1 class="subtitle">Hey there, I'm</h1>
-            <h2 class="title">Ashley</h2>
-            <h1 class="subtitle profession">A UI/UX Designer</h1>
+            <h1 class="subtitle" style="color: black;" >Hola! Somos</h1>
+            <img style="width: 45%;"src="../images/logo.svg" alt="Kiwi standing on oval">
           </div>
         </div>
         <!-- End Hero Content-->
@@ -103,23 +102,23 @@
             <div class="columns">
               <div class="column is-12 hero-menu-desktop has-text-centered">
                 <ul>
-                  <li class="is-active">
-                    <a href="#home">Home</a>
+                  <li class="is-active" style="text-transform: capitalize;">
+                    <a href="#home">inicio</a>
                   </li>
                   <li>
-                    <a href="#about-me">About Me</a>
+                    <a href="#about-me" style="text-transform: capitalize;">Sobre Nosotros</a>
                   </li>
                   <li>
-                    <a href="#services">Services</a>
+                    <a href="#services" style="text-transform: capitalize;">Áreas</a>
                   </li>
                   <li>
-                    <a href="#skills">Skills</a>
+                    <a href="#skills" style="text-transform: capitalize;">Macroproyectos</a>
                   </li>
                   <li>
-                    <a href="#my-work">My Work</a>
+                    <a href="#my-work" style="text-transform: capitalize;">ODS</a>
                   </li>
                   <li>
-                    <a href="#contact">Contact</a>
+                    <a href="#contact" style="text-transform: capitalize;">Contacto</a>
                   </li>
                 </ul>
               </div>
@@ -138,7 +137,7 @@
       <div class="section-light about-me" id="about-me">
         <div class="container">
           <div class="column is-12 about-me">
-            <h1 class="title has-text-centered section-title">About Me</h1>
+            <h1 class="title has-text-centered section-title" style="text-transform: capitalize;">Sigma CAi!</h1>
           </div>
           <div class="columns is-multiline">
             <div
@@ -147,52 +146,43 @@
             >
               <p class="is-larger">
                 &emsp;&emsp;<strong
-                  >Showcase is a modern, beautiful personal website template to
-                  showcase who you are, as well as projects you've worked on in
-                  the past.</strong
+                  >Soñamos con una escuela que piense y actúe en grande, soñamos con generar
+                  una verdadera comunidad en la Escuela de Ingenierı́a.</strong
                 >
               </p>
               <br />
               <p>
-                Showcase was built from the ground up with Bulma to be fast and
-                responsive out of the box with all source files well documented
-                for easy to customization. The Showcase template gives you a
-                personal space to share what you are all about as a creative
-                designer, developer, photographer, and more!
+                Soñamos con encontrarle
+                sentido a la carrera, con ayudar a formar ingenieros ı́ntegros que tengan empatı́a y
+                sean conscientes de su entorno, ya sea de la persona que se encuentra al lado, de
+                un profesor, de un funcionario, de un vecino de la comuna o de nuestro planeta.
+                Soñamos con un verdadero desarrollo sostenible de la Facultad de Ingenierı́a.
               </p>
               <br />
               <div class="is-divider"></div>
               <div class="columns about-links">
                 <div class="column">
                   <p class="heading">
-                    <strong>Give me a ring</strong>
+                    <strong>Síguenos en Instagram</strong>
                   </p>
-                  <p class="subheading">
-                    123-456-7890
-                  </p>
+                  <div>
+                    <a href="https://www.instagram.com/sigma_cai.2020/"><img src="https://img.icons8.com/color/100/000000/instagram-new.png"></a>
+                  </div>
                 </div>
                 <div class="column">
                   <p class="heading">
-                    <strong>Email Me</strong>
+                    <strong>Síguenos en Facebook</strong>
                   </p>
-                  <p class="subheading">
-                    hello@example.com
-                  </p>
-                </div>
-                <div class="column">
-                  <p class="heading">
-                    <strong>View my portfolio</strong>
-                  </p>
-                  <p class="subheading">
-                    example.com
-                  </p>
+                  <div>
+                    <a href="https://www.facebook.com/sigmacai2020/"><img src="https://img.icons8.com/color/96/000000/facebook.png"></a>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="column is-6 right-image " data-aos="fade-left">
               <img
                 class="is-rounded"
-                src="https://picsum.photos/id/366/600/375"
+                src="../images/equipo.jpeg"
                 alt=""
               />
             </div>
@@ -209,17 +199,17 @@
           >
             <div class="column is-12 about-me">
               <h1 class="title has-text-centered section-title">
-                View My Resume
+                nuestro programa
               </h1>
             </div>
             <div class="column is-10 has-text-centered is-offset-1">
               <h2 class="subtitle">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et doloremagna aliqua
+                En él buscamos abarcar los proyectos necesarios para lograr cubrir
+                la mayor parte de los ODS.
               </h2>
               <form action="example.docs">
                 <button class="button">
-                  Download Resume&emsp;<i class="fad fa-download fa-lg"></i>
+                  Descargar programa&emsp;<i class="fad fa-download fa-lg"></i>
                 </button>
               </form>
             </div>
@@ -229,31 +219,30 @@
       <!-- Begin Services Content -->
       <div class="section-color services" id="services">
         <div class="container">
-          <div class="columns is-multiline">
+          <div class="columns is-multiline" style="display: table; table-layout: fixed;">
             <div
               class="column is-12 about-me"
               data-aos="fade-in"
               data-aos-easing="linear"
             >
-              <h1 class="title has-text-centered section-title">Services</h1>
+              <h1 class="title has-text-centered section-title">Áreas</h1>
 
-              <h2 class="subtitle">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua
+              <h2 class="subtitle" style="text-justify: inter-word;">
+                Creemos que debemos dar las herramientas necesarias a los estudiantes
+                para que puedan encontrar su espacio dentro de la escuela. 
               </h2>
               <br />
             </div>
-            <div class="columns is-12">
+            <div class="is-12 columns">
               <div
                 class="column is-4 has-text-centered"
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <i class="fad fa-meteor fa-3x"></i>
+                <i class="fas fa-graduation-cap fa-3x"></i>
                 <hr />
                 <h2>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                  Academia, Investigación y Emprendimiento
                 </h2>
               </div>
               <div
@@ -264,8 +253,7 @@
                 <i class="fas fa-paint-brush fa-3x"></i>
                 <hr />
                 <h2>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                  Artes y Cultura
                 </h2>
               </div>
               <div
@@ -273,26 +261,23 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <i class="fas fa-rocket fa-3x"></i>
+                <i class="fas fa-bullhorn fa-3x"></i>
                 <hr />
                 <h2>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                  Comunicación
                 </h2>
               </div>
             </div>
-            <hr />
             <div class="columns is-12">
               <div
                 class="column is-4 has-text-centered"
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <i class="fas fa-upload fa-3x"></i>
+                <i class="fas fa-heartbeat fa-3x"></i>
                 <hr />
                 <h2>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                  Bienestar y Salud Mental
                 </h2>
               </div>
               <div
@@ -300,11 +285,10 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <i class="fas fa-bus fa-3x"></i>
+                <i class="fas fa-people-carry fa-3x"></i>
                 <hr />
                 <h2>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                  Comunidad e Inclusión
                 </h2>
               </div>
               <div
@@ -312,11 +296,80 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <i class="fas fa-code fa-3x"></i>
+                <i class="fas fa-running fa-3x"></i>
                 <hr />
                 <h2>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua
+                  Deportes
+                </h2>
+              </div>
+            </div>
+            <div class="columns is-12">
+              <div
+                class="column is-4 has-text-centered"
+                data-aos="fade-in"
+                data-aos-easing="linear"
+              >
+                <i class="fas fa-venus-double fa-3x"></i>
+                <hr />
+                <h2>
+                  Feminismo y Diversidad Sexual
+                </h2>
+              </div>
+              <div
+                class="column is-4 has-text-centered"
+                data-aos="fade-in"
+                data-aos-easing="linear"
+              >
+                <i class="fas fa-university fa-3x"></i>
+                <hr />
+                <h2>
+                  Postgrado
+                </h2>
+              </div>
+              <div
+                class="column is-4 has-text-centered"
+                data-aos="fade-in"
+                data-aos-easing="linear"
+              >
+                <i class="fas fa-info fa-3x"></i>
+                <hr />
+                <h2>
+                  Proyectos CAi
+                </h2>
+              </div>
+            </div>
+            <div class="columns is-12">
+              <div
+                class="column is-4 has-text-centered"
+                data-aos="fade-in"
+                data-aos-easing="linear"
+              >
+                <i class="fas fa-hands-helping fa-3x"></i>
+                <hr />
+                <h2>
+                  Rol Social y Representación
+                </h2>
+              </div>
+              <div
+                class="column is-4 has-text-centered"
+                data-aos="fade-in"
+                data-aos-easing="linear"
+              >
+                <i class="fas fa-globe-americas fa-3x"></i>
+                <hr />
+                <h2>
+                  Sustentabilidad y Medioambiente
+                </h2>
+              </div>
+              <div
+                class="column is-4 has-text-centered"
+                data-aos="fade-in"
+                data-aos-easing="linear"
+              >
+                <i class="fas fa-users fa-3x"></i>
+                <hr />
+                <h2>
+                  Vida Universitaria
                 </h2>
               </div>
             </div>
@@ -518,10 +571,7 @@
     <!-- Begin Footer -->
     <div class="footer">
       <p>
-        <strong class="white">Bulma</strong> by <a href="http://jgthms.com">Jeremy Thomas</a>.
-        The source code is licensed
-        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content is licensed
-        <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+        <strong class="white">Sigma CAi</strong>
       </p>
     </div>
     <!-- End Footer -->
