--- a/templates/index.html
+++ b/templates/index.html
@@ -208,7 +208,7 @@
                 En él buscamos abarcar los proyectos necesarios para lograr cubrir
                 la mayor parte de los ODS.
               </h2>
-              <form action="example.docs">
+              <form target="_blank" action="https://drive.google.com/file/d/18CPSr-IeMwGvNgMXCeemU8N_4i_bf9fZ/view">
                 <button class="button">
                   Descargar programa&emsp;<i class="fad fa-download fa-lg"></i>
                 </button>
@@ -240,7 +240,9 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <i class="fas fa-graduation-cap fa-3x"></i>
+                <a href="academia.html" class="icons">
+                  <i class="fas fa-graduation-cap fa-3x"></i>
+                </a>
                 <hr />
                 <h2>
                   Academia, Investigación y Emprendimiento
@@ -250,8 +252,10 @@
                 class="column is-4 has-text-centered"
                 data-aos="fade-in"
                 data-aos-easing="linear"
-              >
-                <i class="fas fa-paint-brush fa-3x"></i>
+              > 
+                <a class="icons">
+                  <i class="fas fa-paint-brush fa-3x"></i>
+                </a>
                 <hr />
                 <h2>
                   Artes y Cultura
@@ -262,7 +266,9 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <i class="fas fa-bullhorn fa-3x"></i>
+                <a class="icons">
+                  <i class="fas fa-bullhorn fa-3x"></i>
+                </a>
                 <hr />
                 <h2>
                   Comunicación
@@ -275,7 +281,9 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <i class="fas fa-heartbeat fa-3x"></i>
+                <a class="icons">
+                  <i class="fas fa-heartbeat fa-3x"></i>
+                </a>
                 <hr />
                 <h2>
                   Bienestar y Salud Mental
@@ -286,7 +294,9 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <i class="fas fa-people-carry fa-3x"></i>
+                <a class="icons">
+                  <i class="fas fa-people-carry fa-3x"></i>
+                </a>
                 <hr />
                 <h2>
                   Comunidad e Inclusión
@@ -297,7 +307,9 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <i class="fas fa-running fa-3x"></i>
+                <a class="icons">
+                  <i class="fas fa-running fa-3x"></i>
+                </a>
                 <hr />
                 <h2>
                   Deportes
@@ -310,7 +322,9 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <i class="fas fa-venus-double fa-3x"></i>
+                <a class="icons">
+                  <i class="fas fa-venus-double fa-3x"></i>
+                </a>
                 <hr />
                 <h2>
                   Feminismo y Diversidad Sexual
@@ -321,7 +335,9 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <i class="fas fa-university fa-3x"></i>
+                <a class="icons">
+                  <i class="fas fa-university fa-3x"></i>
+                </a>
                 <hr />
                 <h2>
                   Postgrado
@@ -332,7 +348,9 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <i class="fas fa-info fa-3x"></i>
+                <a class="icons">
+                  <i class="fas fa-info fa-3x"></i>
+                </a>
                 <hr />
                 <h2>
                   Proyectos CAi
@@ -345,7 +363,9 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <i class="fas fa-hands-helping fa-3x"></i>
+                <a class="icons">
+                  <i class="fas fa-hands-helping fa-3x"></i>
+                </a>
                 <hr />
                 <h2>
                   Rol Social y Representación
@@ -356,7 +376,9 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <i class="fas fa-globe-americas fa-3x"></i>
+                <a class="icons">
+                  <i class="fas fa-globe-americas fa-3x"></i>
+                </a>
                 <hr />
                 <h2>
                   Sustentabilidad y Medioambiente
@@ -367,7 +389,9 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <i class="fas fa-users fa-3x"></i>
+                <a class="icons">
+                  <i class="fas fa-users fa-3x"></i>
+                </a>
                 <hr />
                 <h2>
                   Vida Universitaria
