changed some things to the areas

--- a/templates/comunidad_inclusion.html
+++ b/templates/comunidad_inclusion.html
@@ -157,7 +157,7 @@
               <div class="card-content">
               <div class="content">
                   <h4>Operaciones de novatos</h4>
-                  <p class="tag is-primary">Novatos</p>
+                  <p class="tag is-danger">Novatos</p>
                   <p>Las operaciones de novatos son una de las primeras instancias que tienen los
                         novatos para conocerse entre ellos y con los alumnos de generaciones anteriores,
                         además de compartir con los integrantes del equipo CAi.</p>
@@ -233,7 +233,7 @@
               <div class="card-content">
               <div class="content">
                   <h4>Capacitaciones inclusivas</h4>
-                  <p class="tag is-danger">Inclusión</p>
+                  <p class="tag is-warning">Inclusión</p>
                   <p>Dentro de nuestra escuela creemos que falta trabajar la inclusión dentro de la
                         sala de clases. Para esto proponemos crear capacitaciones orientadas a ayudantes
                         y profesores.</p>
@@ -252,7 +252,7 @@
               <div class="card-content">
               <div class="content">
                   <h4>Capacitaciones de lengua inclusiva</h4>
-                  <p class="tag is-danger">Inclusión</p>
+                  <p class="tag is-warning">Inclusión</p>
                   <p>Para unirnos como comunidad es necesario poder empatizar y relacionarnos correctamente entre todos nosotros. Para esto creemos necesario generar un espacio en
                         el que como comunidad podamos aprender lengua de señas.</p>
                   <span class="button is-link modal-button" data-target="modal-card12">Detalles</span>
@@ -281,7 +281,7 @@
               <img src="https://source.unsplash.com/6Ticnhs1AG0" alt="Placeholder image">
             </figure>
           </div>
-          <div class="card-content">1
+          <div class="card-content">
             <div class="media">
               <div class="media-content">
                 <p class="title is-4">Bienvenida a mitad de año</p>
@@ -474,7 +474,7 @@
                 <div class="media">
                 <div class="media-content">
                     <p class="title is-4">Operaciones de novatos</p>
-                    <p class="tag is-primary">Novatos</p>
+                    <p class="tag is-danger">Novatos</p>
                 </div>
                 </div>
                 <div class="content">
@@ -507,7 +507,7 @@
                 <div class="media">
                 <div class="media-content">
                     <p class="title is-4">Ruta del Novato</p>
-                    <p class="tag is-primary">Novatos</p>
+                    <p class="tag is-danger">Novatos</p>
                 </div>
                 </div>
                 <div class="content">
@@ -568,7 +568,7 @@
                 <div class="media">
                 <div class="media-content">
                     <p class="title is-4">Capacitaciones inclusivas</p>
-                    <p class="tag is-danger">Inclusión</p>
+                    <p class="tag is-warning">Inclusión</p>
                 </div>
                 </div>
                 <div class="content">
@@ -600,7 +600,7 @@
                 <div class="media">
                 <div class="media-content">
                     <p class="title is-4">Capacitaciones de lengua inclusiva</p>
-                    <p class="tag is-danger">Inclusión</p>
+                    <p class="tag is-warning">Inclusión</p>
                 </div>
                 </div>
                 <div class="content">
