--- a/templates/index.html
+++ b/templates/index.html
@@ -327,7 +327,7 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <a href="templates/feminismo_diversidadsexual.html" class="icons">
+                <a class="icons">
                   <i class="fas fa-venus-double fa-3x"></i>
                 </a>
                 <hr />
@@ -340,7 +340,7 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <a href="templates/postgrado.html" class="icons">
+                <a class="icons">
                   <i class="fas fa-university fa-3x"></i>
                 </a>
                 <hr />
@@ -353,7 +353,7 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <a href="templates/proyectos.html" class="icons">
+                <a class="icons">
                   <i class="fas fa-info fa-3x"></i>
                 </a>
                 <hr />
@@ -368,7 +368,7 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <a href="templates/rolsocial_representacion.html" class="icons">
+                <a class="icons">
                   <i class="fas fa-hands-helping fa-3x"></i>
                 </a>
                 <hr />
@@ -381,7 +381,7 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <a href="templates/sustentabilidad_medioambiente.html" class="icons">
+                <a class="icons">
                   <i class="fas fa-globe-americas fa-3x"></i>
                 </a>
                 <hr />
@@ -394,7 +394,7 @@
                 data-aos="fade-in"
                 data-aos-easing="linear"
               >
-                <a href="templates/vida_universitaria.html" class="icons">
+                <a class="icons">
                   <i class="fas fa-users fa-3x"></i>
                 </a>
                 <hr />
